# NetHax

./: .gitignore  CALL_PATH_VERIFICATION.md  CHANGELOG.md  CORRIDORS_DEFICIT_AUDIT.md  CREATE_ROOM_RETRY_AUDIT.md  DEATH_RATE_INVESTIGATION.md  DECOUPLING_FIX.md  DISP_STREAM_AUDIT.md  FILL_SUBCALLS_AUDIT.md  ISAAC64_CALL_ORDER_AUDIT.md  ISAAC64_VENDOR_PARITY_AUDIT.md  LICENSE  MAKEMON_DEEPER_AUDIT.md  MAKEMON_DEFICIT_AUDIT.md  MAKEROOMS_DEFICIT_AUDIT.md  MINIHAX_MAP_GAPS_V2.md  MINIHAX_PARSER_GAPS.md  MINIHAX_PORT_STATUS.md  MKLEV_PORT_PLAN.md  MKLEV_PREAMBLE_AUDIT.md  MKLEV_TRACE_DIFF.md  MKSOBJ_AUDIT.md  MKTRAP_MKGOLD_AUDIT.md  MULTIKEY_ACTION_AUDIT.md  NETHAX_DRAW_COUNT.md  NLE_BYTE_PARITY_REPORT.md  NLE_TERMINATION_ALIGNMENT.md  NLE_VALIDATOR_DELTA.md  OBS_DIMS_AUDIT.md  PRE_MKLEV_RNG_AUDIT.md  README.md  SKILL_ACTION_RUNTIME_GAPS.md  SOMEXY_AUDIT.md  SPECIAL_FEATURES_AUDIT.md  TOOL_CONTAINER_AUDIT.md  TRACE_DIFF_V2.md  TRUE_DRAW_COUNT.md  TTY_LAYOUT_DIFF.md  VMAP_GAPS.md  paper_example.py  (+3 more)
.omc/: continuation-count.json
.test_runs/: BENCH_RESULTS.md  _bench_fov.py  _bench_jit_explicit.py  _bench_monster_step.py  _capture_full_rnd_stream.py  _divergence_sweep.py  _mattackm_write_surface.py  _monster_attack_surface.py  _monster_write_surface.py  _probe_food_rations.py  _probe_minihax_monster_ai.py  _probe_minihax_step_by_step.py  _probe_minihax_ult.py  _probe_mon15_entities.py  _probe_monster_pos.py  _probe_multi_seed.py  _probe_trap_vendor_pos.py  _probe_ult_pos.py  _probe_vendor_food_offset.py  _probe_vendor_food_trace.py  _probe_vendor_item_draws.py  _probe_vendor_stage_offsets.py  _profile_intermediates.py  _profile_scans.py  _state_size.py  _test_fov_parallel.py  _trace_transfer_ep.py  _vec_vs_serial.py  _vendor_state_hash.py  _verify_serial.py  _verify_vec.py  all_failures.txt  diag_seed4_bugb.py  eval_transfer.py  executed_tests.txt  full_init_rn2_trace_room_monster_15x15_seed0.txt  full_init_rn2_trace_room_monster_5x5_seed0.txt  full_init_rn2_trace_room_random_15x15_seed0.txt  full_init_rn2_trace_room_random_5x5_seed0.txt  full_init_rn2_trace_room_trap_15x15_seed0.txt  (+27 more)
Nethax/: nethax_env.py
Nethax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bench/: _jaxpr_breakdown.py  _jaxpr_count.py  _jaxpr_per_handler.py  profile_compile.py  throughput.py
docs/: INV_STRS_FORMAT_DIFF.md  architecture.md  benchmark.md  (+4 more)
(+596 files in other folders)
